--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "se-inventory",
+  "name": "se-inventory-client",
   "version": "0.0.1",
   "description": "Inventory software written strictly using node.js",
   "author": "Mark Myers <marcusmyers@gmail.com> (https://github.com/marcusmyers)",
   "repository": {
 	"type": "git",
-	"url": "https://github.com/marcusmyers/se-inventory.git"
+	"url": "https://github.com/marcusmyers/se-inventory-client.git"
   },
   "license": "MIT",
-  "dependencies": { },
+  "dependencies": {
+    "jsonfile": "^2.0.0"
+  },
   "bin": "./se-inventory.js",
   "preferGlobal": true
 }
