--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "jsonfile": "^2.0.0",
-    "express": "^4.10.4"
+    "express": "^4.10.4",
+    "jade": "*"
   },
   "bin": "./se-inventory.js",
   "preferGlobal": true
