--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "jsonfile": "^2.0.0",
     "express": "^4.10.4",
-    "jade": "*"
+    "jade": "*",
+    "serial-number": "0.3.0"
   },
   "bin": "./se-inventory.js",
   "preferGlobal": true
