--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "jsonfile": "^2.0.0",
     "express": "^4.10.4",
     "jade": "*",
-    "serial-number": "0.3.0"
+    "jsonfile": "^2.0.0",
+    "serial-number": "0.3.0",
+    "socket.io-client": "^1.3.4"
   },
   "bin": "./se-inventory.js",
   "preferGlobal": true
