--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.12.0",
     "express": "^4.10.4",
     "jade": "*",
     "jsonfile": "^2.0.0",
