--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.10.4",
     "jade": "*",
     "jsonfile": "^2.0.0",
+    "numeral": "^1.5.3",
     "serial-number": "0.3.0",
     "socket.io-client": "^1.3.4"
   },
